# myOpenGl

./: .gitignore  CMakeLists.txt
src/: glad.c  main.cpp
src/Color/: Color.hpp
src/Graphics/Camera/: Camera.hpp
src/Graphics/Drawable/: Drawable.hpp
src/Graphics/Drawable/Object/: Object.hpp
src/Graphics/Drawable/Square/: Square.hpp
src/Graphics/Drawable/Triangle/: Triangle.hpp
src/Graphics/Shader/: Shader.hpp
src/Graphics/Texture/: Texture.hpp
src/Graphics/Window/: Window.cpp  Window.hpp
src/System/Key/: Key.hpp
src/System/Vector2/: Vector2.hpp
src/Texture/: Texture.hpp
src/Triangle/: Triangle.hpp
